Update ar-AE.resx (POEditor.com)

--- a/Miki/Languages/ar-AE.resx
+++ b/Miki/Languages/ar-AE.resx
@@ -308,15 +308,15 @@
     <comment>If this pun can&apos;t be translated to your language. Do me a favour and change it with a different one for your language. Otherwise no worries &lt;3</comment>
   </data>
   <data name="miki_module_fun_pun_13" xml:space="preserve">
-    <value>واحد تزاعل مع امع، راح جابلها كرتونة حليب وقالها : ما عاد إلك شيء عندي.</value>
+    <value>كانت أول وظيفة لي هي العمل في مصنع عصير البرتقال, ولكن حصلت على معلب - لا استطيع ان اركز.</value>
     <comment>If this pun can&apos;t be translated to your language. Do me a favour and change it with a different one for your language. Otherwise no worries &lt;3</comment>
   </data>
   <data name="miki_module_fun_pun_14" xml:space="preserve">
-    <value>مالفرق بين الحبل القصير والتنورة القصيرة ؟ الحبل القصير بيجر حمار واحد اما التنورة القصيرة بتجر (100) حمار.</value>
+    <value>انا مسويه دايت على اكلات بحرية, كل ما اشوف طعام, أكله.</value>
     <comment>If this pun can&apos;t be translated to your language. Do me a favour and change it with a different one for your language. Otherwise no worries &lt;3</comment>
   </data>
   <data name="miki_module_fun_pun_15" xml:space="preserve">
-    <value>مرة واحد أكل مكعبات ماجي, أجاه مغص. سألو الدكتور شو أكلت؟ قال: توفي أبو ديك</value>
+    <value>انا ابيه اسوي نكت على صوديوم, بس لاه</value>
     <comment>If this pun can&apos;t be translated to your language. Do me a favour and change it with a different one for your language. Otherwise no worries &lt;3</comment>
   </data>
   <data name="miki_module_fun_pun_16" xml:space="preserve">
